<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="_50">50</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="togglebutton1">ToggleButton</string>
    <string name="_3">3</string>
    <string name="no_svs">NO SVS</string>
    <string name="svs">SVS</string>
    <string name="togglebutton2">ToggleButton</string>
    <string name="no_gst">NO GST</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="_10">10</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
</resources>